fixed overlaps in css

--- a/css/style.css
+++ b/css/style.css
@@ -1875,7 +1875,7 @@ ol {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position-x: center;
-    background-color: #000e2e;
+    background-color: #000000;
 }
 
 .social-button {
